--- a/src/style.css
+++ b/src/style.css
@@ -37,6 +37,9 @@ body{
     font-size: 3rem;
     margin-bottom: 1rem;
   }
+  h2{
+    margin: 1rem 0;
+  }
   
   p {
     font-size: 1.5rem;
@@ -153,6 +156,10 @@ body{
   }
   button:active{
     color:#0069d9
+  }
+
+  .hidden{
+    display:none;
   }
   
   .checkout-form button[type="submit"]:hover {
